chore: rename module to boilerplate, and refactor workflow and tool options

--- a/.buildrc.example
+++ b/.buildrc.example
@@ -1,2 +1,2 @@
-export IMAGE_NAME=golang-fx-gin-gorm-boilerplate-project
+export IMAGE_NAME=boilerplate
 export IMAGE_VERSION=$(date +%Y%m%d-%H%M%S)
